--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
-set(EIGEN3_INCLUDE_DIR "/usr/include/eigen3" CACHE STRING "Eigen3 include directory")
-set(SLIMAGE_INCLUDE_DIR "/home/david/git/slimage/src" CACHE STRING "Slimage include directory")
+set(EIGEN3_INCLUDE_DIR "/usr/include/eigen3" CACHE STRING "eigen3 include directory")
+set(SLIMAGE_INCLUDE_DIR "/home/david/git/slimage/include" CACHE STRING "slimage include directory")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
